--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Aether Browser</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -97,25 +100,7 @@
     </style>
 </head>
 <body>
-    <div class="titlebar">
-        <div class="titlebar-buttons">
-            <button class="titlebar-button" id="minimize">─</button>
-            <button class="titlebar-button" id="maximize">□</button>
-            <button class="titlebar-button" id="close">×</button>
-        </div>
-    </div>
-
-    <div class="navbar">
-        <div class="nav-buttons">
-            <button class="nav-button" id="back">←</button>
-            <button class="nav-button" id="forward">→</button>
-            <button class="nav-button" id="reload">↻</button>
-        </div>
-        <input type="text" class="url-bar" id="url-input" placeholder="Digite uma URL...">
-    </div>
-
-    <div id="browser-view"></div>
-
-    <script src="renderer.js"></script>
+    <div id="root"></div>
+    <script src="dist/bundle.js"></script>
 </body>
 </html> 
